<resources>
    <string name="app_name">TrendingNews</string>

    <string name="str_newsstand_menu">Newsstand</string>
    <string name="str_categories">News Categories</string>
    <string name="str_all_news">All News</string>
    <string name="str_favorites_menu">Favorites</string>
    <string name="str_comments_menu">Comments</string>

    <string name="str_business">Business</string>
    <string name="str_entertainment">Entertainment</string>
    <string name="str_general">General</string>
    <string name="str_health">Health</string>
    <string name="str_science">Science</string>
    <string name="str_sports">Sports</string>
    <string name="str_technology">Technology</string>

    <string name="str_abc_news">ABC News</string>
    <string name="str_bbc_news">BBC News</string>
    <string name="str_cnn">CNN</string>
    <string name="str_cnbc">CNBC</string>
    <string name="str_fox_news">FOX News</string>
    <string name="str_the_washington_times">The Washington Times</string>
    <string name="str_the_wall_street_journal">The Wall Street Journal</string>
    <string name="str_usa_today">USA Today</string>
    <string name="str_engadget">Engadget</string>
    <string name="str_entertainment_weekly">Entertainment Weekly</string>
    <string name="str_espn">ESPN</string>
    <string name="str_financial_times">Financial Times</string>
    <string name="str_business_insider">Business Insider</string>
    <string name="str_national_geographic">National Geographic</string>

    <string name="str_settings_menu">Settings</string>
    <string name="str_signout_menu">SignOut</string>

    <string name="str_headlines">Headlines</string>
    <string name="str_popular">Popular</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="str_news_image_thumbnail">News Thumbnail Image</string>
    <string name="str_news_category">News Category</string>

    <string name="str_full_coverage">Full Coverage</string>

    <string name="str_description">Description: </string>
    <string name="str_author">Author: </string>
    <string name="str_published_at">Published At: </string>
    <string name="str_content">Content: </string>
    <string name="str_url">URL: </string>

    <string name="str_url_unavailable">URL is unavailable</string>
    <string name="str_send_to">Send To</string>
</resources>
