<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/str_newsstand_menu"
        android:icon="@drawable/ic_newsstand">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/str_categories"
                    android:icon="@drawable/ic_category"
                    android:id="@+id/menu_categories" />

                <item android:title="@string/str_all_news"
                    android:icon="@drawable/ic_bookmark"
                    android:id="@+id/menu_all_news" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="none">
        <item android:title="@string/str_favorites_menu"
            android:id="@+id/menu_favorites"
            android:icon="@drawable/ic_favorites"/>
    </group>

    <group android:checkableBehavior="none">
        <item android:title="@string/str_comments_menu"
            android:id="@+id/menu_comments"
            android:icon="@drawable/ic_comments"/>
    </group>
</menu>